<resources>
    <string name="app_name">Coin Admin</string>
    <string name="app_name_version">Coin Admin v%1$s</string>
    <string name="flockware">flockware</string>

    <string name="shared_preferences_session">coin_admin_session_shared_preferences</string>

    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>

    <string name="log_in">Accedi</string>
    <string name="add">Aggiungi</string>
    <string name="cancel">Annulla</string>
    <string name="authorizes">Autorizza</string>
    <string name="close">Chiudi</string>
    <string name="delete">Elimina</string>
    <string name="back">Indietro</string>
    <string name="menu">Menu</string>
    <string name="edit">Modifica</string>
    <string name="save">Salva</string>
    <string name="select">Seleziona</string>
    <string name="use_pin">USA IL PIN</string>


    <string name="amount_euros">%1$s €</string>
    <string name="standing_position">%1$d. %2$s</string>
    <string name="standing_position_null">%1$d. …</string>

    <string name="transaction_new">Nuovo movimento</string>
    <string name="transaction_category">Categoria</string>
    <string name="transaction_no_category">Senza categoria</string>
    <string name="transaction_description">Descrizione</string>
    <string name="transaction_amount">Importo</string>
    <string name="transaction_date">Data</string>

    <string name="transaction_paid_in">Entrata</string>
    <string name="transaction_paid_out">Uscita</string>
    <string name="transaction_payment_cash">Contanti</string>
    <string name="transaction_payment_digital">Digitale</string>
    <string name="transaction_payment_type">Pagamento</string>

    <string name="category_add">Aggiungi categoria</string>
    <string name="category_new">Nuova categoria</string>
    <string name="category_name">Nome</string>
    <string name="category_color">Colore</string>

    <string name="categories_title">Categorie</string>

    <string name="select_color">Seleziona un colore</string>
    <string name="select_category">Seleziona una categoria</string>

    <string name="settings">Impostazioni</string>
    <string name="settings_categories">Gestione categorie</string>
    <string name="settings_create_pin">Imposta pin</string>
    <string name="settings_edit_pin">Modifica pin</string>
    <string name="settings_use_fingerprint">Accedi con l\'impronta digitale</string>
    <string name="settings_import">Importa database</string>
    <string name="settings_export">Esporta database</string>


    <string name="pin_insert_pin">Inserisci PIN</string>
    <string name="pin_insert_new_pin">Scegli il nuovo PIN</string>

    <string name="menu_pin_delete_pin">Disabilita PIN</string>

    <string name="statistics_title">Statistiche</string>
</resources>