<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorBackground">

    <com.flockware.coinadmin.ui.views.TopBar
        android:id="@+id/aat_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_title="@string/transaction_new"
        app:tb_left_icon="@drawable/ic_arrow_left"
        app:tb_right_icon="@drawable/ic_save"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aat_category_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_category"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/aat_top_bar"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aat_category_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textCapSentences"
            android:text="@string/transaction_no_category"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aat_desc_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_description"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/aat_category_til"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aat_desc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aat_amount_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_amount"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/aat_desc_til"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aat_amount_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aat_date_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_date"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/aat_amount_til"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aat_date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/aat_payment_type_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_payment_type"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/aat_date_til"
        app:layout_constraintStart_toStartOf="@id/startGuideline" />
    <LinearLayout
        android:id="@+id/aat_payment_type_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        style="?attr/buttonBarStyle"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/aat_payment_type_title_tv"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline">
        <Button
            android:id="@+id/aat_btn_payment_cash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_btn_stroke"
            android:text="@string/transaction_payment_cash"
            android:textStyle="bold"
            android:textColor="?attr/colorAccent"
            style="?attr/buttonBarButtonStyle"
            android:includeFontPadding="false"
            android:layout_marginEnd="@dimen/standard_screen_padding_half"/>

        <Button
            android:id="@+id/aat_btn_payment_digital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/aat_date_til"
            android:background="@drawable/background_btn_stroke"
            android:text="@string/transaction_payment_digital"
            android:textStyle="bold"
            android:textColor="?attr/colorAccent"
            style="?attr/buttonBarButtonStyle"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/standard_screen_padding_half"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aat_paid_in_out_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        style="?attr/buttonBarStyle"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/aat_payment_type_container"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline">
        <Button
            android:id="@+id/aat_btn_paid_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_btn_stroke_green"
            android:text="@string/transaction_paid_in"
            android:textStyle="bold"
            android:textColor="@color/broccolo"
            style="?attr/buttonBarButtonStyle"
            android:includeFontPadding="false"
            android:layout_marginEnd="@dimen/standard_screen_padding_half"/>

        <Button
            android:id="@+id/aat_btn_paid_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/aat_date_til"
            android:background="@drawable/background_btn_stroke_red"
            android:text="@string/transaction_paid_out"
            android:textStyle="bold"
            android:textColor="@color/darth_maul"
            style="?attr/buttonBarButtonStyle"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/standard_screen_padding_half"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/standard_screen_padding" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/standard_screen_padding" />
</androidx.constraintlayout.widget.ConstraintLayout>