<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorBackground">

    <com.flockware.coinadmin.ui.views.TopBar
        android:id="@+id/as_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_title="@string/settings"
        app:tb_left_icon="@drawable/ic_arrow_left"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/as_categories_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_folders"
        app:tint="?attr/colorContent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/as_top_bar"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        android:contentDescription="@string/settings_create_pin" />
    <TextView
        android:id="@+id/as_categories_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_categories"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/standard_screen_padding_half"
        app:layout_constraintTop_toTopOf="@id/as_categories_iv"
        app:layout_constraintStart_toEndOf="@id/as_categories_iv"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintBottom_toBottomOf="@id/as_categories_iv"/>



    <ImageView
        android:id="@+id/as_pin_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_padlock"
        app:tint="?attr/colorContent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/as_categories_iv"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        android:contentDescription="@string/settings_create_pin" />
    <TextView
        android:id="@+id/as_pin_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_create_pin"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/standard_screen_padding_half"
        app:layout_constraintTop_toTopOf="@id/as_pin_iv"
        app:layout_constraintStart_toEndOf="@id/as_pin_iv"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintBottom_toBottomOf="@id/as_pin_iv"/>


    <ImageView
        android:id="@+id/as_fingerprint_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_fingerprint"
        app:tint="?attr/colorContent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/as_pin_iv"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        android:contentDescription="@string/settings_use_fingerprint" />
    <TextView
        android:id="@+id/as_fingerprint_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_use_fingerprint"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/standard_screen_padding_half"
        app:layout_constraintTop_toTopOf="@id/as_fingerprint_iv"
        app:layout_constraintStart_toEndOf="@id/as_fingerprint_iv"
        app:layout_constraintEnd_toStartOf="@id/as_fingerprint_switch"
        app:layout_constraintBottom_toBottomOf="@id/as_fingerprint_iv"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/as_fingerprint_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/as_fingerprint_iv"
        app:layout_constraintBottom_toBottomOf="@id/as_fingerprint_iv"
        app:layout_constraintEnd_toEndOf="@id/endGuideline" />


    <ImageView
        android:id="@+id/as_export_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_export"
        app:tint="?attr/colorContent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/as_fingerprint_iv"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        android:contentDescription="@string/settings_use_fingerprint" />
    <TextView
        android:id="@+id/as_export_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_export"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/standard_screen_padding_half"
        app:layout_constraintTop_toTopOf="@id/as_export_iv"
        app:layout_constraintStart_toEndOf="@id/as_export_iv"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintBottom_toBottomOf="@id/as_export_iv"/>

    <TextView
        android:id="@+id/as_app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/poppins_light"
        android:textSize="12sp"
        android:textColor="?attr/colorContentSoft"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintBottom_toTopOf="@id/as_flockware_tv"/>
    <TextView
        android:id="@+id/as_flockware_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flockware"
        android:fontFamily="@font/poppins_light"
        android:textSize="10sp"
        android:textColor="?attr/colorContentSoft"
        android:layout_marginBottom="@dimen/standard_screen_padding"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SmallSp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/standard_screen_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/standard_screen_padding" />

</androidx.constraintlayout.widget.ConstraintLayout>