<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:paddingVertical="50dp"
    android:paddingHorizontal="@dimen/standard_screen_padding"
    android:id="@+id/ap_background"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/ap_menu_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_menu_dots"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="@id/ap_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ap_title_tv"
        android:contentDescription="@string/menu"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/ap_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_insert_pin"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ap_pin_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ap_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ap_pin_kb_1">
        <View
            android:id="@+id/ap_pin_digit_1_view"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/background_ring"
            android:layout_marginHorizontal="10dp" />
        <View
            android:id="@+id/ap_pin_digit_2_view"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/background_ring"
            android:layout_marginHorizontal="10dp" />
        <View
            android:id="@+id/ap_pin_digit_3_view"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/background_ring"
            android:layout_marginHorizontal="10dp" />
        <View
            android:id="@+id/ap_pin_digit_4_view"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/background_ring"
            android:layout_marginHorizontal="10dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/ap_progress_bar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ap_pin_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ap_pin_kb_2"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ap_pin_kb_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        android:layout_marginBottom="@dimen/standard_screen_padding"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_2"
        app:layout_constraintBottom_toTopOf="@id/ap_pin_kb_4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_1"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_1"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_3"
        app:layout_constraintBottom_toBottomOf="@id/ap_pin_kb_1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_2"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ap_pin_kb_1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_3"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ap_pin_kb_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        android:layout_marginBottom="@dimen/standard_screen_padding"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_2"
        app:layout_constraintBottom_toTopOf="@id/ap_pin_kb_7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_4"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_1"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_3"
        app:layout_constraintBottom_toBottomOf="@id/ap_pin_kb_4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_5"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ap_pin_kb_4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_6"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ap_pin_kb_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        android:layout_marginBottom="@dimen/standard_screen_padding"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_2"
        app:layout_constraintBottom_toTopOf="@id/ap_pin_kb_fingerprint">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_7"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_1"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_3"
        app:layout_constraintBottom_toBottomOf="@id/ap_pin_kb_7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_8"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ap_pin_kb_7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_9"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ap_pin_kb_fingerprint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_2"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_fingerprint"
            app:tint="@color/white"
            android:padding="18dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_1"
        app:layout_constraintEnd_toStartOf="@id/ap_pin_kb_3"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digit_0"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:includeFontPadding="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ap_pin_kb_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_keyboard"
        app:layout_constraintWidth_percent=".20"
        app:layout_constraintDimensionRatio="H 1,1"
        app:layout_constraintStart_toEndOf="@id/ap_pin_kb_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_delete_keyboard"
            app:tint="@color/white"
            android:padding="18dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>